--- a/myapp/templates/header.html
+++ b/myapp/templates/header.html
@@ -47,15 +47,15 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'icons' %}">
+              <a class="nav-link" href="{% url 'add-test' %}">
                 <i class="ni ni-planet text-orange"></i>
-                <span class="nav-link-text">Icons</span>
+                <span class="nav-link-text">Add Test</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="examples/map.html">
+              <a class="nav-link" href="{% url 'pending-test' %}">
                 <i class="ni ni-pin-3 text-primary"></i>
-                <span class="nav-link-text">Google</span>
+                <span class="nav-link-text">Pending Test</span>
               </a>
             </li>
             <li class="nav-item">
