--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -14,7 +14,7 @@
 			<div class="col-md-6 ser-right-page">
 				<div class="port-2 effect-3">
                 	<div class="image-box w3">
-                    	<img src="images/a1.jpg" alt=" "/>
+                    	<img src="{% static 'images/a1.jpg' %}" alt=" "/>
                     </div>
                     <div class="text-desc">
                     	<h4>Clinical Lab</h4>
@@ -84,7 +84,7 @@
 			<div class="clearfix"></div>
 		</div>
 		<div class="col-md-4 abt-top agileits-w3layouts">
-			<img src="images/a2.png" alt=" "/>
+			<img src="{% static 'images/a2.png' %}" alt=" "/>
 		</div>
 		<div class="clearfix"></div>
 	</div>
@@ -97,7 +97,7 @@
 			<div class="col-md-3 team-grid agile">
 				<div class="team-img">
 					<div class="view second-effect">
-						<img src="images/3.jpg" alt="" class="img-responsive" />
+						<img src="{% static 'images/3.jpg' %}" alt="" class="img-responsive" />
 						<div class="mask">
 							<p>Ophthalmologist</p>
 							<ul>
@@ -113,7 +113,7 @@
 			<div class="col-md-3 team-grid agile">
 				<div class="team-img">
 					<div class="view second-effect">
-						<img src="images/4.jpg" alt="" class="img-responsive" />
+						<img src="{% static 'images/4.jpg' %}" alt="" class="img-responsive" />
 						<div class="mask w3-agile">
 							<p>Neurologist</p>
 							<ul>
@@ -129,7 +129,7 @@
 			<div class="col-md-3 team-grid">
 				<div class="team-img agile">
 					<div class="view second-effect">
-						<img src="images/2.jpg" alt="" class="img-responsive" />
+						<img src="{% static 'images/2.jpg' %}" alt="" class="img-responsive" />
 						<div class="mask w3-agile">
 							<p>Cardiologist</p>
 							<ul>
@@ -145,7 +145,7 @@
 			<div class="col-md-3 team-grid">
 				<div class="team-img">
 					<div class="view second-effect">
-						<img src="images/4.jpg" alt="" class="img-responsive" />
+						<img src="{% static 'images/4.jpg' %}" alt="" class="img-responsive" />
 						<div class="mask agileits-w3layouts">
 							<p>Dermatologist</p>
 							<ul>
