--- a/client/templates/clientindex.html
+++ b/client/templates/clientindex.html
@@ -100,16 +100,19 @@
 <!-- services -->
 <div class="services_agile">
 	<div class="container">
-		<h3 class="title">Our Best Services</h3>
+		<h3 class="title">Our Tests </h3>
 		<div class="services_right w3-agile">
+			{% for test in tests %}
 			<div class="col-md-4 list-left text-center wow bounceInDown" data-wow-duration="1.5s" data-wow-delay="0.1s">
 				<span><img src="{% static 'images/icon1.png' %}" alt=" "/></span>
-				<h4>Voluptatem</h4>
+				<h4>{{test.title}}</h4>
 				<div class="multi-gd-text"><a href="#"><img class="img-responsive" src="{% static 'images/p5.jpg' %}" alt=" "/></a></div>
-				<p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-					sed quia consequuntur magni dolores eos qui</p>
+				<p>{{test.des}}</p>
+				<h5>Book at just : <i class="fa fa-rupee"></i> {{test.price}}/- </h5><br><br>
+				<a href=""><button class="btn btn-primary">Book Test</button></a>
 			</div>
-			<div class="col-md-4 list-left text-center wow bounceInDown" data-wow-duration="1.5s" data-wow-delay="0.2s">
+			{% endfor %}
+			<!-- <div class="col-md-4 list-left text-center wow bounceInDown" data-wow-duration="1.5s" data-wow-delay="0.2s">
 				<span><img src="{% static 'images/icon2.png' %}" alt=" "/></span>
 				<h4>Voluptatem</h4>
 				<div class="multi-gd-text"><a href="#"><img class="img-responsive" src="{% static 'images/p6.jpg' %}" alt=" "/></a></div>
@@ -122,7 +125,7 @@
 				<div class="multi-gd-text"><a href="#"><img class="img-responsive" src="{% static 'images/p7.jpg' %}" alt=" "/></a></div>
 				<p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
 					sed quia consequuntur magni dolores eos qui</p>
-			</div>
+			</div> -->
 			<div class="clearfix"></div>
 		</div>
 	</div>
