--- a/client/templates/head.html
+++ b/client/templates/head.html
@@ -66,7 +66,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li><a href="{% url 'about' %}">About</a></li>
 					<li><a href="{% url 'treatments' %}">Treatments</a></li>
 					<li><a href="{% url 'contact' %}">Contact</a></li>
-					<li><a href="{% url 'contact' %}">Login/Sign Up</a></li>
+					<li><a href="{% url 'signin' %}">Login/Sign Up</a></li>
 				</ul>	
 				<div class="clearfix"> </div>	
 			</div>
