--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -94,7 +94,7 @@
 		<h3 class="title">Team</h3>
 		<div class="team-grids">
 			{% for i in admins %}
-			<div class="col-md-3 team-grid agile">
+			<div class="col-md-3 team-grid agile" style="margin-top: 30px;">
 				<div class="team-img">
 					<div class="view second-effect">
 						<img src="{{i.pic.url}}" alt="" class="img-responsive" />
