--- a/client/templates/change-password.html
+++ b/client/templates/change-password.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block header %}
 
-<div class="contact_w3agile">
+<div class="contact_w3agile" style="background:#B6D0E2;">
 	<div class="container">
 		<h2 class="title w3">Change Password</h2>
 		<div class="strip" style="width: 20%;"></div>
@@ -16,7 +16,7 @@
             <input type="password" placeholder="RE-type New Password" name="cpassword" style="width: 50%;" required><br><br><br>
             </div>
 			<div class="con-form text-center">
-				<input type="submit" value="Change Password" style="width: 30%;" >
+				<input type="submit" value="Change Password" style="width: 30%; background:black;" >
 			</div>
 		</form>
 	</div>
