--- a/client/templates/signup.html
+++ b/client/templates/signup.html
@@ -664,7 +664,7 @@
         }
     }
 </style>
-<div class="page-wrapper bg-gra-02 p-t-130 p-b-100 font-poppins">
+<div class="page-wrapper bg-gra-02 p-t-130 p-b-100 font-poppins" style="background:#B6D0E2;">
     <div class="wrapper wrapper--w680">
         <div class="card card-4">
             <div class="card-body">
@@ -690,7 +690,7 @@
                             <div class="input-group">
                                 <label class="label">Age</label>
                                 <div class="input-group-icon">
-                                    <input class="input--style-4 js-datepicker" type="number" name="birthday">
+                                    <input class="input--style-4 js-datepicker" type="text" name="birthday">
                                     <i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i>
                                 </div>
                             </div>
@@ -732,13 +732,13 @@
                         <div class="col-2">
                             <div class="input-group">
                                 <label class="label">aadhar</label>
-                                <input type="number" class="input--style-4" name="aadhar">
+                                <input type="text" class="input--style-4" name="aadhar">
                             </div>
                         </div>
                         <div class="col-2">
                             <div class="input-group">
                                 <label class="label">address</label>
-                                <textarea name="address" id="" class="input--style-4" cols="22" rows="1"></textarea>
+                                <textarea name="address" id="" class="input--style-4" cols="22" rows="1" style="border:none;"></textarea>
                             </div>
                         </div>
                     </div>
