--- a/client/templates/client-profile.html
+++ b/client/templates/client-profile.html
@@ -2,5 +2,211 @@
 {% load static %}
 {% block header %}
 
+<style>
+{% comment %} 
+body{
+    margin-top:20px;
+    color: #1a202c;
+    text-align: left;
+    background-color: #e2e8f0;    
+} {% endcomment %}
+.main-body {
+    background-color: #e2e8f0;    
+    padding: 15px;
+}
+.card {
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+}
 
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1rem;
+}
+
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
+}
+
+.gutters-sm>.col, .gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+}
+
+.bg-gray-300 {
+    background-color: #e2e8f0;
+}
+.h-100 {
+    height: 100%!important;
+}
+.shadow-none {
+    box-shadow: none!important;
+}
+</style>
+
+<div class="container">
+    <div class="main-body">    
+          <!-- Breadcrumb -->
+          <nav aria-label="breadcrumb" class="main-breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item active" aria-current="page">User Profile</li>
+            </ol>
+          </nav>
+          <!-- /Breadcrumb -->    
+          <div class="row gutters-sm">
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <div class="card-body">
+                  <div class="d-flex flex-column align-items-center text-center">
+                    <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+                    <div class="mt-3">
+                      <h4>{{uid.fname}} {{uid.lname}}</h4>                      
+                    </div>
+                  </div>
+                </div>
+              </div>              
+            </div>
+            <div class="col-md-8">
+              <div class="card mb-3">
+                <div class="card-body">
+                    <h1 style="font:bold;text-align:center;">User Profile</h1><br>
+                    {% if msg %}
+                    <p style="font:bold;text-align:center;">{{msg}}</p>
+                    {% endif %}
+                <form action="{% url 'client-profile' %}" method="POST"> 
+                    {% csrf_token %} 
+                    <div class="row">
+                        <div class="col-sm-3">
+                        <h6 class="mb-0">First Name</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                        <input type="text" name="fname" value="{{uid.fname}}" class="form-control" style="width:100%;"/>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-sm-3">
+                        <h6 class="mb-0">Last Name</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                            <input type="text" name="lname" value="{{uid.lname}}" class="form-control" style="width:100%;"/>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-sm-3">
+                        <h6 class="mb-0">Gender</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                            <select name="gender" class="form-control" style="width:100%;">
+                                {% if uid.gender == 'Male' %}
+                                <option value="Male" selected>Male</option>
+                                <option value="Female">Female</option>
+                                <option value="Other">Other</option>
+                                {% elif uid.gender == 'Female' %}
+                                <option value="Male">Male</option>
+                                <option value="Female" selected>Female</option>
+                                <option value="Other">Other</option>
+                                {% else %}
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
+                                <option value="Other" selected>Other</option>
+                                {% endif %}
+                            </select>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-sm-3">
+                        <h6 class="mb-0">Age</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                            <input type="text" name="age" value="{{uid.age}}" class="form-control" style="width:100%;" />
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-sm-3">
+                        <h6 class="mb-0">Email</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                            <input type="email" name="email" value="{{uid.email}}" class="form-control" style="width:100%;" disabled/>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-sm-3">
+                        <h6 class="mb-0">Mobile</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                            <input type="text" name="mobile" value="{{uid.mobile}}" class="form-control" style="width:100%;" />
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-sm-3">
+                        <h6 class="mb-0">Aadhar</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                            <input type="text" name="aadhar" value="{{uid.aadhar}}" class="form-control" style="width:100%;" />
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-sm-3">
+                        <h6 class="mb-0">Address</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                            <textarea name="address" style="width:100%;" class="form-control">{{uid.address}}</textarea>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-sm-3">
+                        <h6 class="mb-0">Password</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                            <input type="password" name="password" id="myInput" value="{{uid.password}}" class="form-control" style="width:100%;" data-toggle="password" disabled/><br>
+                            <input type="checkbox" onclick="myFunction()">Show Password
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-sm-12">
+                        <center><input type="submit" value="SAVE AND CHANGE" class="form-control"/></center>
+                        </div>
+                    </div>
+                </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+    <script>
+      function myFunction() {
+        var x = document.getElementById("myInput");
+        if (x.type === "password") {
+          x.type = "text";
+        } else {
+          x.type = "password";
+        }
+      }
+    </script>
 {% endblock %}
