--- a/myapp/templates/header.html
+++ b/myapp/templates/header.html
@@ -22,6 +22,7 @@
   <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  
 
 </head>
 
@@ -80,6 +81,12 @@
               <a class="nav-link" href="examples/register.html">
                 <i class="ni ni-circle-08 text-pink"></i>
                 <span class="nav-link-text">Register</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'payment-details' %}">
+                <i class="ni ni-circle-08 text-pink"></i>
+                <span class="nav-link-text">Payment Details</span>
               </a>
             </li>
             <li class="nav-item">
