--- a/client/templates/signup.html
+++ b/client/templates/signup.html
@@ -675,13 +675,13 @@
                         <div class="col-2">
                             <div class="input-group">
                                 <label class="label">first name</label>
-                                <input class="input--style-4" type="text" name="first_name">
+                                <input class="input--style-4" type="text" name="first_name" style="background:#D7CECC;">
                             </div>
                         </div>
                         <div class="col-2">
                             <div class="input-group">
                                 <label class="label">last name</label>
-                                <input class="input--style-4" type="text" name="last_name">
+                                <input class="input--style-4" type="text" name="last_name" style="background:#D7CECC;">
                             </div>
                         </div>
                     </div>
@@ -690,7 +690,7 @@
                             <div class="input-group">
                                 <label class="label">Age</label>
                                 <div class="input-group-icon">
-                                    <input class="input--style-4 js-datepicker" type="text" name="birthday">
+                                    <input class="input--style-4 js-datepicker" type="text" name="birthday" style="background:#D7CECC;">
                                     <i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i>
                                 </div>
                             </div>
@@ -718,13 +718,13 @@
                         <div class="col-2">
                             <div class="input-group">
                                 <label class="label">Email</label>
-                                <input class="input--style-4" type="email" name="email">
+                                <input class="input--style-4" type="email" name="email" style="background:#D7CECC;">
                             </div>
                         </div>
                         <div class="col-2">
                             <div class="input-group">
                                 <label class="label">Phone Number</label>
-                                <input class="input--style-4" type="text" name="phone">
+                                <input class="input--style-4" type="text" name="phone" style="background:#D7CECC;">
                             </div>
                         </div>
                     </div>
@@ -732,13 +732,13 @@
                         <div class="col-2">
                             <div class="input-group">
                                 <label class="label">aadhar</label>
-                                <input type="text" class="input--style-4" name="aadhar">
+                                <input type="text" class="input--style-4" name="aadhar" style="background:#D7CECC;">
                             </div>
                         </div>
                         <div class="col-2">
                             <div class="input-group">
                                 <label class="label">address</label>
-                                <textarea name="address" id="" class="input--style-4" cols="22" rows="1" style="border:none;"></textarea>
+                                <textarea name="address" id="" class="input--style-4" cols="22" rows="1" style="border:none;background:#D7CECC;"></textarea>
                             </div>
                         </div>
                     </div>
@@ -746,13 +746,13 @@
                         <div class="col-2">
                             <div class="input-group">
                                 <label class="label">password</label>
-                                <input class="input--style-4" type="password" name="password">
+                                <input class="input--style-4" type="password" name="password" style="background:#D7CECC;">
                             </div>
                         </div>
                         <div class="col-2">
                             <div class="input-group">
                                 <label class="label">re-type password</label>
-                                <input class="input--style-4" type="password" name="cpassword">
+                                <input class="input--style-4" type="password" name="cpassword" style="background:#D7CECC;">
 
                             </div>
                         </div>
